Updating UI of signup form, adding get and post forms in parallel

--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -1,5 +1,45 @@
-<form action="/thankyou" method="post">
+<div class="form-container">
+<div class="form-wrapper">
+<form action="/thankyou" method="get">
+<h2>Get Request</h2>
+<div class="label-style">
+<label for="email">Email id</label>
+</div>
+<div class="input-style">
 <input type="email" name="email" placeholder="email">
+</div>
+<div class="label-style">
+<label for="password">Password</label>
+</div>
+<div class="input-style">
 <input type="password" name="password" placeholder="password">
+</div>
+<div class="input-style">
 <button type="submit">Submit</button>
+</div>
 </form>
+</div>
+<div class="form-wrapper">
+<h2>Post Request</h2>
+<form action="/thankyou" method="post">
+<div class="label-style">
+<label for="email">Email id</label>
+</div>
+<div class="input-style" >
+<input type="email" name="email" placeholder="email">
+</div>
+<div class="label-style">
+<label for="password">Password</label>
+</div>
+<div class="input-style">
+<input type="password" name="password" placeholder="password">
+</div>
+<div class="input-style">
+<button type="submit">Submit</button>
+</div>
+</form>
+</div>
+</form>
+</div>
+</div>
+
