Added name field to the sign-up form and updated the placeholders

--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -3,16 +3,22 @@
 <form action="/thankyou" method="get">
 <h2>Get Request</h2>
 <div class="label-style">
+<label for="name">Name</label>
+</div>
+<div class="input-style" >
+<input type="text" name="name" placeholder="Full Name" required>
+</div>
+<div class="label-style">
 <label for="email">Email id</label>
 </div>
-<div class="input-style">
-<input type="email" name="email" placeholder="email">
+<div class="input-style" >
+<input type="email" name="email" placeholder="Email" required>
 </div>
 <div class="label-style">
 <label for="password">Password</label>
 </div>
 <div class="input-style">
-<input type="password" name="password" placeholder="password">
+<input type="password" name="password" placeholder="Password" required>
 </div>
 <div class="input-style">
 <button type="submit">Submit</button>
@@ -23,16 +29,22 @@
 <h2>Post Request</h2>
 <form action="/thankyou" method="post">
 <div class="label-style">
+<label for="name">Name</label>
+</div>
+<div class="input-style" >
+<input type="text" name="name" placeholder="Full Name" required>
+</div>
+<div class="label-style">
 <label for="email">Email id</label>
 </div>
 <div class="input-style" >
-<input type="email" name="email" placeholder="email">
+<input type="email" name="email" placeholder="Email" required>
 </div>
 <div class="label-style">
 <label for="password">Password</label>
 </div>
 <div class="input-style">
-<input type="password" name="password" placeholder="password">
+<input type="password" name="password" placeholder="Password" required>
 </div>
 <div class="input-style">
 <button type="submit">Submit</button>
