--- a/views/thankyou.handlebars
+++ b/views/thankyou.handlebars
@@ -1,2 +1,2 @@
-<h2>Thank you for visiting!</h2>
-<p>Hi, your email id is {{email}} and password is {{password}}</p>
+<h2>Hi {{name}}, thank you for visiting!</h2>
+<p>Your email id is {{email}} and password is {{password}}</p>
